--- a/Bankist App/index.html
+++ b/Bankist App/index.html
@@ -27,7 +27,7 @@
         />
         <!-- In practice, use type="password" -->
         <input
-          type="text"
+          type="password"
           placeholder="PIN"
           maxlength="4"
           class="login__input login__input--pin"
@@ -44,7 +44,7 @@
           <p class="balance__date">
             As of <span class="date">05/03/2037</span>
           </p>
-        </div> 
+        </div>  
         <p class="balance__value">0000€</p>
       </div>
 
