implemented page navigation using event delegation

--- a/Page_Nav/page.html
+++ b/Page_Nav/page.html
@@ -23,7 +23,7 @@
     </style>
 </head>
 <body>
-    <ul>
+    <ul class="nav__links">
     <li>
         <a href="#section_1" class="nav__link">Home</a>
     </li>
