--- a/Page_Nav/page.html
+++ b/Page_Nav/page.html
@@ -19,6 +19,7 @@
             height: 100vh;
             border: 1px solid purple;
             margin-block: 1rem;
+            padding-top: 1.4rem;
         }
     </style>
 </head>
