--- a/Advanced DOM/index.html
+++ b/Advanced DOM/index.html
@@ -152,6 +152,7 @@
             <span>03</span>Instant Closing
           </button>
         </div>
+        <!--Operation Content-->
         <div
           class="operations__content operations__content--1 operations__content--active"
         >
