--- a/Advanced DOM/index.html
+++ b/Advanced DOM/index.html
@@ -155,7 +155,7 @@
         <!--Operation Content-->
         <div
           class="operations__content operations__content--1 operations__content--active"
-        >
+        > 
           <div class="operations__icon operations__icon--1">
             <svg>
               <use xlink:href="img/icons.svg#icon-upload"></use>
@@ -187,7 +187,7 @@
             cupidatat non proident, sunt in culpa qui officia deserunt mollit
             anim id est laborum.
           </p>
-        </div>
+        </div> <!--operations__content--2 this code was later used in js line 121-->
         <div class="operations__content operations__content--3">
           <div class="operations__icon operations__icon--3">
             <svg>
