--- a/Page_Nav/page.html
+++ b/Page_Nav/page.html
@@ -12,14 +12,35 @@
             box-sizing: border-box;
             list-style-type: none;
             margin-inline: 1rem;
+        }
+
+        .nav__links {
+            transition: all 0.01s;
+            padding-block: 1rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: gray;
+            margin-inline: 0;
 
         }
 
         section {
-            height: 100vh;
+            margin-block: 2rem;
+            height: 50vh;
             border: 1px solid purple;
             margin-block: 1rem;
             padding-top: 1.4rem;
+        }
+
+        .section--1 {
+            height: 100vh;
+            margin-top: 3rem;
+        }
+
+        .sticky {
+            position: sticky;
+            top: 0;
         }
     </style>
 </head>
@@ -38,12 +59,12 @@
     </li>
 </ul>
 
-<section id="section_1">
+<section id="section_1" >
 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque, iure quae sapiente ipsum debitis minus hic at quia? Et a alias est nemo porro ratione minus, tempora deleniti cumque quos.
 Magnam, nostrum. Quidem animi voluptatibus adipisci doloremque vel, harum, hic praesentium provident odio odit minima itaque! Cumque aperiam molestiae dolores minima corporis quaerat ipsum maiores. Ab voluptatem exercitationem aliquam accusamus!</p>
 </section>
 
-<section id="section_2">
+<section id="section_2" class="section--1">
 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A debitis at quas voluptates vitae accusamus, dolorem nostrum adipisci. Doloribus corporis suscipit fuga. Blanditiis officia facere odio cum explicabo, necessitatibus molestiae?
 Nihil, quod explicabo ullam molestiae blanditiis hic, iusto ut distinctio culpa impedit perspiciatis cumque iure, non nobis illum. Magnam quasi eaque fugiat vero illum, quia corrupti molestiae sed enim excepturi.</p>
 </section>
