--- a/Page_Nav/page.html
+++ b/Page_Nav/page.html
@@ -22,7 +22,13 @@
             align-items: center;
             background-color: gray;
             margin-inline: 0;
+        }
 
+         a {
+            text-decoration: none;
+            font-family: Arial, Helvetica, sans-serif;
+            color: black;
+            opacity: 1;
         }
 
         section {
