--- a/Page_Nav/page.html
+++ b/Page_Nav/page.html
@@ -20,7 +20,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: gray;
+            background-color: rgb(219, 217, 217);
             margin-inline: 0;
         }
 
