implemented reveal on scroll using the Intersection Observer API

--- a/Page_Nav/page.html
+++ b/Page_Nav/page.html
@@ -20,7 +20,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: rgb(219, 217, 217);
+            background-color: grey;
             margin-inline: 0;
         }
 
@@ -31,21 +31,32 @@
             opacity: 1;
         }
 
-        section {
+        section, div {
             margin-block: 2rem;
             height: 50vh;
             border: 1px solid purple;
             margin-block: 1rem;
             padding-top: 1.4rem;
+            transition: opacity 1s, transform 1s;
+        }
+
+        .section__hidden {
+            opacity: 0;
+            transform: translateY(8rem);
         }
 
         .section--1 {
             height: 100vh;
-            margin-top: 3rem;
+            margin-top: 1rem;
+        }
+
+        div {
+            height: 100vh;
         }
 
         .sticky {
             position: sticky;
+            background-color: rgb(219, 217, 217);
             top: 0;
         }
     </style>
@@ -65,10 +76,10 @@
     </li>
 </ul>
 
-<section id="section_1" >
+<div id="section_1" >
 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque, iure quae sapiente ipsum debitis minus hic at quia? Et a alias est nemo porro ratione minus, tempora deleniti cumque quos.
 Magnam, nostrum. Quidem animi voluptatibus adipisci doloremque vel, harum, hic praesentium provident odio odit minima itaque! Cumque aperiam molestiae dolores minima corporis quaerat ipsum maiores. Ab voluptatem exercitationem aliquam accusamus!</p>
-</section>
+</div>
 
 <section id="section_2" class="section--1">
 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A debitis at quas voluptates vitae accusamus, dolorem nostrum adipisci. Doloribus corporis suscipit fuga. Blanditiis officia facere odio cum explicabo, necessitatibus molestiae?
