--- a/OOP/index.html
+++ b/OOP/index.html
@@ -6,7 +6,7 @@
     <title>Object Oriented Programming</title>
 </head>
 <body>
-    
+    <h1>OBJECT ORIENTED PROGRAMMING</h1>
 
     <script src="script.js"></script>
 </body>
