--- a/OOP/index.html
+++ b/OOP/index.html
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Object Oriented Programming</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>OBJECT ORIENTED PROGRAMMING</h1>
 
-    <script src="script.js"></script>
-</body>
+    <!-- Chart component logic -->
+    <!-- <p>The first boy's name is <span class="name"></span></p>
+    <p>The second boy's name is <span class="name"></span></p>
+    <p>The third boy's name is <span class="name"></span></p>
+    <p>The fourth boy's name is <span class="name"></span></p> -->
+
+    <script src="script.js">
+        // Chart component logic
+    //           const names = ["Prime", "Anonymous", "JNS", "Pascal"];
+    //   const userName = document.querySelectorAll(".name");
+
+    //   names.forEach(function (arrayName, position) {
+    //     userName.forEach(function (username, namePosition) {
+    //       if (position === namePosition) {
+    //         username.textContent = arrayName
+    //       }
+    //     });
+    //   });
+    </script>
+  </body>
 </html>
