coding challenge 2 completed

--- a/Looping Arrays/index.html
+++ b/Looping Arrays/index.html
@@ -1,19 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Looping Through Arrays</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <p class="hi">Hi1</p>
     <p class="hi">Hi2</p>
     <p class="hi">Hi3</p>
     <p class="hi">Hi4</p>
 
     <script src="app.js"></script>
-</body>
-
+  </body>
 </html>
