--- a/OOP/index.html
+++ b/OOP/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -15,17 +15,17 @@
     <p>The fourth boy's name is <span class="name"></span></p> -->
 
     <script src="script.js">
-        // Chart component logic
-    //           const names = ["Prime", "Anonymous", "JNS", "Pascal"];
-    //   const userName = document.querySelectorAll(".name");
+          // Chart component logic
+      //           const names = ["Prime", "Anonymous", "JNS", "Pascal"];
+      //   const userName = document.querySelectorAll(".name");
 
-    //   names.forEach(function (arrayName, position) {
-    //     userName.forEach(function (username, namePosition) {
-    //       if (position === namePosition) {
-    //         username.textContent = arrayName
-    //       }
-    //     });
-    //   });
+      //   names.forEach(function (arrayName, position) {
+      //     userName.forEach(function (username, namePosition) {
+      //       if (position === namePosition) {
+      //         username.textContent = arrayName
+      //       }
+      //     });
+      //   });
     </script>
   </body>
 </html>
