--- a/Advanced DOM/index.html
+++ b/Advanced DOM/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -15,7 +15,7 @@
   </head>
   <body>
     <header class="header">
-      <nav class="nav ">
+      <nav class="nav">
         <img
           src="img/logo.png"
           alt="Bankist logo"
@@ -155,7 +155,7 @@
         <!--Operation Content-->
         <div
           class="operations__content operations__content--1 operations__content--active"
-        > 
+        >
           <div class="operations__icon operations__icon--1">
             <svg>
               <use xlink:href="img/icons.svg#icon-upload"></use>
@@ -187,7 +187,8 @@
             cupidatat non proident, sunt in culpa qui officia deserunt mollit
             anim id est laborum.
           </p>
-        </div> <!--operations__content--2 this code was later used in js line 121-->
+        </div>
+        <!--operations__content--2 this code was later used in js line 121-->
         <div class="operations__content operations__content--3">
           <div class="operations__icon operations__icon--3">
             <svg>
@@ -260,7 +261,7 @@
             <h5 class="testimonial__header">
               Finally free from old-school banks
             </h5>
-            <blockquote class="testimonial__text"> 
+            <blockquote class="testimonial__text">
               Debitis, nihil sit minus suscipit magni aperiam vel tenetur
               incidunt commodi architecto numquam omnis nulla autem,
               necessitatibus blanditiis modi similique quidem. Odio aliquam
@@ -274,7 +275,7 @@
               <p class="testimonial__location">Lisbon, Portugal</p>
             </address>
           </div>
-        </div> 
+        </div>
 
         <!-- <div class="slide"><img src="img/img-1.jpg" alt="Photo 1" /></div>
         <div class="slide"><img src="img/img-2.jpg" alt="Photo 2" /></div>
