--- a/Bankist App/index.html
+++ b/Bankist App/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -44,17 +44,19 @@
           <p class="balance__date">
             As of <span class="date">05/03/2037</span>
           </p>
-        </div>  
+        </div>
         <p class="balance__value">0000€</p>
       </div>
 
       <!-- MOVEMENTS -->
       <div class="movements">
-        <div class="movements__row">ó
+        <div class="movements__row">
+          ó
           <div class="movements__type movements__type--deposit">2 deposit</div>
           <div class="movements__date">3 days ago</div>
           <div class="movements__value">4 000€</div>
-        </div>óó
+        </div>
+        óó
         <div class="movements__row">
           <div class="movements__type movements__type--withdrawal">
             1 withdrawal
