--- a/DOM Practice (Starter)/index.html
+++ b/DOM Practice (Starter)/index.html
@@ -1,71 +1,94 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Opening & Closing a Nav Menu (Mobile)</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
-
+  <body>
     <div class="body">
-        <div class="nav">
-            <div class="nav-logo">
-                <h1>Prime</h1>
-            </div>
-
-            <div class="nav-items hidden ">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </div>
-
-            <div class="nav-icon">
-                <button class="btn">
-                    <span class="top"></span>
-                    <span class="middle"></span>
-                    <span class="bottom"></span>
-                </button>
-            </div>
-
+      <div class="nav">
+        <div class="nav-logo">
+          <h1>Prime</h1>
         </div>
 
-        <p>My name is Isaac Ayomide, and i'm currently on a path to becoming a great and successful frontend engineer
-        </p>
-        <p>My name is Isaac Ayomide, and i'm currently on a path to becoming a great and successful frontend engineer
-        </p>
-        <p>My name is Isaac Ayomide, and i'm currently on a path to becoming a great and successful frontend engineer
-        </p>
-        <p>My name is Isaac Ayomide, and i'm currently on a path to becoming a great and successful frontend engineer
-        </p>
-        <p>My name is Isaac Ayomide, and i'm currently on a path to becoming a great and successful frontend engineer
-        </p>
-        <p>My name is Isaac Ayomide, and i'm currently on a path to becoming a great and successful frontend engineer
-        </p>
-        <p>My name is Isaac Ayomide, and i'm currently on a path to becoming a great and successful frontend engineer
-        </p>
-        <p>My name is Isaac Ayomide, and i'm currently on a path to becoming a great and successful frontend engineer
-        </p>
-        <p>My name is Isaac Ayomide, and i'm currently on a path to becoming a great and successful frontend engineer
-        </p>
-        <p>My name is Isaac Ayomide, and i'm currently on a path to becoming a great and successful frontend engineer
-        </p>
-        <p>My name is Isaac Ayomide, and i'm currently on a path to becoming a great and successful frontend engineer
-        </p>
-        <p>My name is Isaac Ayomide, and i'm currently on a path to becoming a great and successful frontend engineer
-        </p>
-        <p>My name is Isaac Ayomide, and i'm currently on a path to becoming a great and successful frontend engineer
-        </p>
-        <p>My name is Isaac Ayomide, and i'm currently on a path to becoming a great and successful frontend engineer
-        </p>
+        <div class="nav-items hidden">
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
+
+        <div class="nav-icon">
+          <button class="btn">
+            <span class="top"></span>
+            <span class="middle"></span>
+            <span class="bottom"></span>
+          </button>
+        </div>
+      </div>
+
+      <p>
+        My name is Isaac Ayomide, and i'm currently on a path to becoming a
+        great and successful frontend engineer
+      </p>
+      <p>
+        My name is Isaac Ayomide, and i'm currently on a path to becoming a
+        great and successful frontend engineer
+      </p>
+      <p>
+        My name is Isaac Ayomide, and i'm currently on a path to becoming a
+        great and successful frontend engineer
+      </p>
+      <p>
+        My name is Isaac Ayomide, and i'm currently on a path to becoming a
+        great and successful frontend engineer
+      </p>
+      <p>
+        My name is Isaac Ayomide, and i'm currently on a path to becoming a
+        great and successful frontend engineer
+      </p>
+      <p>
+        My name is Isaac Ayomide, and i'm currently on a path to becoming a
+        great and successful frontend engineer
+      </p>
+      <p>
+        My name is Isaac Ayomide, and i'm currently on a path to becoming a
+        great and successful frontend engineer
+      </p>
+      <p>
+        My name is Isaac Ayomide, and i'm currently on a path to becoming a
+        great and successful frontend engineer
+      </p>
+      <p>
+        My name is Isaac Ayomide, and i'm currently on a path to becoming a
+        great and successful frontend engineer
+      </p>
+      <p>
+        My name is Isaac Ayomide, and i'm currently on a path to becoming a
+        great and successful frontend engineer
+      </p>
+      <p>
+        My name is Isaac Ayomide, and i'm currently on a path to becoming a
+        great and successful frontend engineer
+      </p>
+      <p>
+        My name is Isaac Ayomide, and i'm currently on a path to becoming a
+        great and successful frontend engineer
+      </p>
+      <p>
+        My name is Isaac Ayomide, and i'm currently on a path to becoming a
+        great and successful frontend engineer
+      </p>
+      <p>
+        My name is Isaac Ayomide, and i'm currently on a path to becoming a
+        great and successful frontend engineer
+      </p>
     </div>
 
-
     <script src="script.js"></script>
-</body>
-
+  </body>
 </html>
