--- a/More about Functions/index.html
+++ b/More about Functions/index.html
@@ -1,16 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>A CLOSER LOOK AT FUNCTIONS</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <h1>A closer look at functions</h1>
     <button class="btn">Answer Poll</button>
     <script src="script.js"></script>
-</body>
-
+  </body>
 </html>
