--- a/Todo/todo.html
+++ b/Todo/todo.html
@@ -1,40 +1,34 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TODO EXAMPLE</title>
 
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: Arial, Helvetica, sans-serif;
-        }
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: Arial, Helvetica, sans-serif;
+      }
 
-        p {
-            margin-top: 0.4rem;
-        }
+      p {
+        margin-top: 0.4rem;
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <form action="">
-        <fieldset>
-            <input type="text" placeholder="Enter Task" class="input">
-            <button class="add">Add Task</button>
+      <fieldset>
+        <input type="text" placeholder="Enter Task" class="input" />
+        <button class="add">Add Task</button>
 
-            <p class="tasks">
-
-            </p>
-        </fieldset>
+        <p class="tasks"></p>
+      </fieldset>
     </form>
 
-
-
     <script src="todo.js"></script>
-</body>
-
+  </body>
 </html>
